tests/invalid/duplicate_module_update.wio
@ModuleUpdate
fn TickModuleA(deltaTime: f32) {
}

@ModuleUpdate
fn TickModuleB(deltaTime: f32) {
}

fn Entry() -> i32 {
    return 0;
}
